# webmcp-gateway

./: .gitignore  LICENSE  README.md  pyproject.toml
blog/: 01-build-webmcp-gateway.md  02-webmcp-async-responses.md
docs/: WEBMCP_PROTOCOL.md
examples/: claude_desktop_config.json  demo_site.html  demo_site_iframe.html
src/webmcp_gateway/: __init__.py  __main__.py  browser.py  cli.py  detect.py  server.py
tests/: test_browser.py  test_detect.py
