[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webmcp-gateway"
version = "0.1.0"
description = "MCP server that bridges AI assistants to websites exposing WebMCP tools via headless browser automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Salespeak AI", email = "dev@salespeak.ai" },
]
keywords = ["mcp", "webmcp", "ai", "browser-automation", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
webmcp-gateway = "webmcp_gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/webmcp_gateway"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
